@@ -21,7 +21,7 @@ $_lang['test_memory_limit_success'] = 'OK! Set to %s';
 $_lang['test_mysql_version_5051'] = 'MODx will have issues on your MySQL version (%s), because of the many bugs related to the PDO drivers on this version. Please upgrade MySQL to patch these problems. Even if you choose not to use MODx, it is recommended you upgrade to this version for the security and stability of your own website.';
 $_lang['test_mysql_version_client_nf'] = 'Could not detect MySQL client version!';
 $_lang['test_mysql_version_client_nf_msg'] = 'MODx could not detect your MySQL client version via mysql_get_client_info(). Please manually make sure that your MySQL client version is at least 4.1.20 before proceeding.';
-$_lang['test_mysql_version_client_start'] = 'Checking MySQL server version:';
+$_lang['test_mysql_version_client_start'] = 'Checking MySQL client version:';
 $_lang['test_mysql_version_fail'] = 'You are running on MySQL %s, and MODx Revolution requires MySQL 4.1.20 or later. Please upgrade MySQL to at least 4.1.20.';
 $_lang['test_mysql_version_server_nf'] = 'Could not detect MySQL server version!';
 $_lang['test_mysql_version_server_nf_msg'] = 'MODx could not detect your MySQL server version via mysql_get_server_info(). Please manually make sure that your MySQL server version is at least 4.1.20 before proceeding.';
