@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1426] Fixed issue with MySQL checks on non-standard 
 - [#MODX-1437] Fixed duplicate policy
 - Fixed some issues with Form Customization
 - Added 'address' field to modUserProfile
